...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:visibility="gone"
            android:text='@{arguments.prefEntryValue == "system" ? @string/system_lock_soft_warning : @string/no_lock_soft_warning}'
            android:id="@+id/soft_storage_warning"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_layout"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/passphrase_hint"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:id="@+id/passphrase"
            android:layout_marginBottom="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
...
            >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@android:string/no"
            android:visibility="gone"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_button"
            android:text="@string/system_lock_next"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:enabled="@{viewModel.working ? false : true}"/>

...
